[gd_scene load_steps=11 format=3 uid="uid://be0ku5iih3c24"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_13w51"]
[ext_resource type="Texture2D" uid="uid://cllgv3mxplysy" path="res://placeholder.png" id="2_oq6ra"]
[ext_resource type="Texture2D" uid="uid://ba0rdput6dvcx" path="res://Assets/sonar_placeholder.png" id="3_3mwre"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1707p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_oq6ra")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xhdff"]
radius = 28.5011

[sub_resource type="CircleShape2D" id="CircleShape2D_yo03w"]
radius = 266.002

[sub_resource type="CircleShape2D" id="CircleShape2D_1cpqf"]
radius = 63.0317

[sub_resource type="Animation" id="Animation_8ijip"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sonar:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lwhbc"]
resource_name = "sonar_animation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sonar:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l56uy"]
_data = {
"RESET": SubResource("Animation_8ijip"),
"sonar_animation": SubResource("Animation_lwhbc")
}

[node name="HolyDiver" type="CharacterBody2D" groups=["player"]]
z_index = 1
floor_stop_on_slope = false
floor_block_on_wall = false
script = ExtResource("1_13w51")

[node name="PlayerAnimatedSprite" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(1, -79)
sprite_frames = SubResource("SpriteFrames_1707p")

[node name="PlayerAreaCollisionShape" type="CollisionShape2D" parent="."]
z_index = 2
z_as_relative = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_xhdff")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.470588)
self_modulate = Color(1, 1, 1, 0.368627)
position = Vector2(-5, -34)
scale = Vector2(5.44873, 5.44873)
texture = ExtResource("3_3mwre")

[node name="Sonar" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sonar"]
visible = false
position = Vector2(0, -32)
shape = SubResource("CircleShape2D_yo03w")

[node name="part_detection" type="Area2D" parent="."]
position = Vector2(0, -12)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="part_detection"]
shape = SubResource("CircleShape2D_1cpqf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l56uy")
}

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -173.0
offset_top = -356.0
offset_right = 174.0
offset_bottom = -257.0
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="area_entered" from="Sonar" to="." method="_on_sonar_area_entered"]
[connection signal="area_exited" from="Sonar" to="." method="_on_sonar_area_exited"]
[connection signal="area_entered" from="part_detection" to="." method="_on_part_detection_area_entered"]
[connection signal="area_exited" from="part_detection" to="." method="_on_part_detection_area_exited"]
